@@ -97,6 +97,10 @@ module t (/*AUTOARG*/
       for (r=1.0; r<2.0; r=r+0.1) i++;
       if (i!=10) $stop;
       // bug
+      ci64 = $realtobits(1.444);
+      if (ci64 != 64'h3ff71a9fbe76c8b4) $stop;
+      r = $bitstoreal(64'h3ff71a9fbe76c8b4);
+      if (r != 1.444) $stop;
       r = $bitstoreal($realtobits(1.414));
       if (r != 1.414) $stop;
       // bug
